--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.properties.hibernate.format_sql=true
 spring.jpa.show-sql=true
 
 logging.level.com.zaxxer=info
+
+server.address=0.0.0.0
+server.port=8080
